--- a/Account/Login.cshtml
+++ b/Account/Login.cshtml
@@ -5,7 +5,7 @@
 }
 
 @{
-    Layout = "~/_SiteLayout2.cshtml";
+    Layout = "~/_SiteLayout.cshtml";
     Page.Title = "Log in";
 
     // Initialize general page variables
