--- a/Account/PasswordReset.cshtml
+++ b/Account/PasswordReset.cshtml
@@ -5,7 +5,7 @@
 }
 
 @{
-    Layout = "~/_SiteLayout2.cshtml";
+    Layout = "~/_SiteLayout.cshtml";
     Page.Title = "Password Reset";
 
     var passwordResetToken = Request.Form["resetToken"] ?? Request.QueryString["resetToken"];
