--- a/Account/Confirm.cshtml
+++ b/Account/Confirm.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Layout = "~/_SiteLayout2.cshtml";
+    Layout = "~/_SiteLayout.cshtml";
     Page.Title = "Registration Confirmation Page";
 
     string message = "";
