--- a/Account/ForgotPassword.cshtml
+++ b/Account/ForgotPassword.cshtml
@@ -5,7 +5,7 @@
 }
 
 @{
-    Layout = "~/_SiteLayout2.cshtml";
+    Layout = "~/_SiteLayout.cshtml";
     Page.Title = "Forget Your Password";
 
     bool passwordSent = false;
