--- a/Account/Manage.cshtml
+++ b/Account/Manage.cshtml
@@ -9,7 +9,7 @@
 @{
     WebSecurity.RequireAuthenticatedUser();
 
-    Layout = "~/_SiteLayout2.cshtml";
+    Layout = "~/_SiteLayout.cshtml";
     Page.Title = "Manage Account";
 
     var action = Request.Form["action"];
