--- a/Account/Register.cshtml
+++ b/Account/Register.cshtml
@@ -5,7 +5,7 @@
 }
 
 @{
-    Layout = "~/_SiteLayout2.cshtml";
+    Layout = "~/_SiteLayout.cshtml";
     Page.Title = "Register";
 
     // Initialize general page variables
