--- a/Account/RegisterService.cshtml
+++ b/Account/RegisterService.cshtml
@@ -5,7 +5,7 @@
 }
 
 @{
-    Layout = "~/_SiteLayout2.cshtml";
+    Layout = "~/_SiteLayout.cshtml";
     Page.Title = "Register";
 
     string email = "";
