--- a/Account/Thanks.cshtml
+++ b/Account/Thanks.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     // Set the layout page and page title
-    Layout = "~/_SiteLayout2.cshtml";
+    Layout = "~/_SiteLayout.cshtml";
     Page.Title = "Thanks for registering";
 }
 
