--- a/CSS/ChatHub.css
+++ b/CSS/ChatHub.css
@@ -1,6 +1,4 @@
-﻿@import url(//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
-
-body {
+﻿body {
     padding: 30px 0px 60px;
 }
 .panel > .list-group .list-group-item:first-child {
@@ -16,11 +14,6 @@ body {
         height: 1px !important;
     }
 }
-#back-to-bootsnipp {
-    position: fixed;
-    top: 10px; right: 10px;
-}
-
 
 .c-search > .form-control {
     border-radius: 0px;
