--- a/_SiteLayout.cshtml
+++ b/_SiteLayout.cshtml
@@ -3,16 +3,46 @@
 <head>
     <title>@Page.Title - The Second Home</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.2">
     <script src="~/JS/jquery-3.2.1.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
     <link href="~/Content/themes/base/jquery.ui.all.css" rel="stylesheet" type="text/css" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-    <script src="~/Scripts/jquery-ui-1.10.3.js"></script>
-    <script src="~/Scripts/modernizr-2.6.2.js"></script>
+    <style>
+         hr {
+             height: 4px;
+             margin-left: 15px;
+             margin-bottom:-3px;
+         }
+        .hr-warning{
+            background-image: -webkit-linear-gradient(left, rgba(210,105,30,.8), rgba(210,105,30,.6), rgba(0,0,0,0));
+        }
+        .hr-success{
+            background-image: -webkit-linear-gradient(left, rgba(15,157,88,.8), rgba(15, 157, 88,.6), rgba(0,0,0,0));
+        }
+        .hr-primary{
+            background-image: -webkit-linear-gradient(left, rgba(66,133,244,.8), rgba(66, 133, 244,.6), rgba(0,0,0,0));
+        }
+        .hr-danger{
+            background-image: -webkit-linear-gradient(left, rgba(244,67,54,.8), rgba(244,67,54,.6), rgba(0,0,0,0));
+        }
+
+        .breadcrumb {
+            background: rgba(245, 245, 245, 0);
+            border: 0px solid rgba(245, 245, 245, 1);
+            border-radius: 25px;
+            display: block;
+        }
+
+        .btn-bread{
+            margin-top:10px;
+            font-size: 12px;
+
+            border-radius: 3px;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
@@ -28,7 +58,7 @@
             <br>
             <br>
             <ul class="breadcrumb">
-                <li><a href="~/">Home</a></li>
+                <li><a href="~/Default"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
                 <li><a href="~/About">About</a></li>
                 <li><a href="~/Contact">Contact</a></li>
             </ul>
@@ -46,8 +76,8 @@
                 @if (WebSecurity.IsAuthenticated)
                 {
                     <text>
-                        Hello, <a class="email" href="~/Account/Manage" title="Manage">@WebSecurity.CurrentUserName</a>!
-                        <form id="logoutForm" action="~/Account/Logout" method="post">
+                        Hello, <a class="email" href="~/Account/Manage.cshtml" title="Manage">@WebSecurity.CurrentUserName</a>!
+                        <form id="logoutForm" action="~/Account/Logout.cshtml" method="post">
                             @AntiForgery.GetHtml()
                             <a class="btn btn-primary btn-xs" href="javascript:document.getElementById('logoutForm').submit()">Log out</a>
                         </form>
@@ -56,9 +86,9 @@
                 else
                 {
                     <ul>
-                        <a class="btn btn-primary btn-xs" href="~/Account/Register">Register</a>
+                        <a class="btn btn-primary btn-xs" href="~/Account/Register.cshtml">Register</a>
                         <br>
-                        <a class="btn btn-primary btn-xs" href="~/Account/Login">Log  in</a>
+                        <a class="btn btn-primary btn-xs" href="~/Account/Login.cshtml">Log in</a>
                     </ul>
                 }
             </section>
@@ -70,7 +100,7 @@
             <br>
             <div class="row">
                 <hr class="hr-primary" />
-                <ol class="breadcrumb bread-primary ">
+                <ol class="breadcrumb bread-primary">
                     <button href="#" class="btn btn-primary"><i class="fa fa-newspaper-o"></i> Education News</button>
                 </ol>
             </div>
@@ -83,13 +113,13 @@
             <div class="row">
                 <hr class="hr-success" />
                 <ol class="breadcrumb bread-success">
-                    <button href="#" class="btn btn-success"><i class="fa fa-life-ring"></i> Sports</button>
+                    <a href="~/ParentsLink.cshtml" class="btn btn-success"><i class="fa fa-life-ring"></i> Parents Link</a>
                 </ol>
             </div>
             <div class="row">
                 <hr class="hr-warning" />
                 <ol class="breadcrumb bread-warning">
-                    <button href="~/ChatHub.cshtml" class="btn btn-warning"><i class="fa fa-facebook-square"></i> Chat Hub </button>
+                    <a href="~/ChatHub.cshtml" class="btn btn-warning"><i class="fa fa-facebook-square"></i> Chat Hub </a>
                 </ol>
             </div>
         </div>
