--- a/_SiteLayout.cshtml
+++ b/_SiteLayout.cshtml
@@ -118,7 +118,7 @@
                         <a href="~/EducationalOutcome.cshtml" class="btn btn-primary"><i class="fa fa-bar-chart"></i> Educational Outcome </a>
                     </ol>
                 </div>
-                <div class="row">
+              @*  <div class="row">
                     <hr class="hr-danger" />
                     <ol class="breadcrumb bread-danger">
                         <a id="modal-137380" href="#modal-container-137380" data-toggle="modal" class="btn btn-danger"> <i class="fa fa-flag"></i> Identify Vulnerable Kids</a>
@@ -153,6 +153,12 @@
                                 </div>
                             </div>
                         </div>
+                    </ol>
+                </div>*@
+                <div class="row">
+                    <hr class="hr-danger" />
+                    <ol class="breadcrumb bread-danger">
+                        <a href="~/IdentifyStudent.cshtml" class="btn btn-danger"><i class="fa fa-flag"></i> Identify Vulnerable Kids </a>
                     </ol>
                 </div>
                 <div class="row">
