--- a/ChatHub.cshtml
+++ b/ChatHub.cshtml
@@ -58,51 +58,32 @@
     }
 </style>
 <script>
-    var chat = $.connection.chatHub; //chatHub小寫
+    var chat = $.connection.chatHub;
     var name = null;
-    //初始
+
+    //Promote a window for the user to input NickName
     $(function () {
         name = prompt("Please input your Pseudonym", "TeacherA");
-        /*        bootbox.prompt({
-                    title: "Hi " + name + ", before you use this tool to communication, please check the requirements listed below.",
-                    inputType: 'checkbox',
-                    inputOptions: [
-                        {
-                            text: 'Do not leak any privacy of any child.',
-                            value: '1'
-                        },
-                        {
-                            text: 'Show you respect to every user in the channel.',
-                            value: '2'
-                        }
-                    ],
-                    callback: function (result) {
-                        console.log(result);
-                    }
-                });*/
     });
 
-    //signalR啟動完成後，要執行的動作
+    //After the SignalR set up, what need to do
     $.connection.hub.start().done(function () {
 
-        //通知Server，有新使用者連進來
+        //Make the server know when new user come
         chat.server.userConnected(name);
 
-        //按傳送鈕
+        //Send Button
         $('#btnSend').click(function () {
             send();
         });
-        //按Enter鍵
+        //when Enter button click
         $('#txtMsg').keydown(function (e) {
             if (e.which == 13) {
                 send();
             }
         });
 
-        //選取某一個使用者
-        //★用 $("#lstUser li").click()會抓不到
-        //★jQuery1.7以前建議使用$("#lstUser li").live("click",fn)
-        //★jQuery1.7以後建議使用$(document).on("click", "#lstUser li",fn)
+        //Select one user
         $(document).on("click",
             "#lstUser li",
             function () {
@@ -114,12 +95,12 @@
             });
     });
 
-    //顯示訊息
+    //Display Usage
     chat.client.show = function (message) {
         $('#chatRoom').append('<li>' + message + '</li>');
     };
 
-    //顯示user清單
+    //Display User List
     chat.client.getList = function (users) {
         var li = "<li id=all>Public Channel</li>";
         $.each(users,
@@ -129,7 +110,7 @@
         $('#lstUser').html(li);
     };
 
-    //使用者離開
+    //User Leave
     chat.client.removeList = function (id) {
         $('#' + id).remove();
     };
@@ -147,7 +128,7 @@
     }
     console.log(checkkeywords("Hello, this is"));
 
-    //傳送聊天內容至Server
+    //Send message to the server
     function send() {
         var id = $('#lblTalkToWhoId').text();
         var message = $('#txtMsg').val();
@@ -178,11 +159,11 @@
                     </div>
                 </div>
                 <div class="container">
-                        Send To:
-                        <label id="lblTalkToWho">Public Channel</label>
-                        <label id="lblTalkToWhoId" hidden>all</label>
-                        <input id="txtMsg" type="text" />
-                        <input type="button" id="btnSend" value="Send" class="btn btn-warning"/>
+                    Send To:
+                    <label id="lblTalkToWho">Public Channel</label>
+                    <label id="lblTalkToWhoId" hidden>all</label>
+                    <input id="txtMsg" type="text" />
+                    <input type="button" id="btnSend" value="Send" class="btn btn-warning" />
                 </div>
             </div>
             <div class="col-xs-6 col-sm-offset-0 col-sm-3">
@@ -199,14 +180,5 @@
             </div>
         </div>
         <br />
-@*        <div class="row">
-            <div class="col-xs-6 col-sm-offset-1 col-sm-5">
-                Send To:
-                <label id="lblTalkToWho">Public Channel</label>
-                <label id="lblTalkToWhoId" hidden>all</label>
-                <input id="txtMsg" type="text" />
-                <input id="btnSend" type="button" value="Send" class="btn-warning"/>
-            </div>
-        </div>*@
     </div>
 </div>
